--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,7 +1,7 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
-= form_tag movies_path, :method => :get, id: "ratings_form" do
+= form_tag movies_path(:sort => session[:sort]), :method => :get, id: "ratings_form" do
   Include: 
   - if params[:ratings].nil? and session[:ratings].nil?
     - @all_ratings.each do |rating|
@@ -21,10 +21,10 @@
   %thead
     %tr
       %th{:class => ('hilite' if @sort == 'title') }
-        = link_to "Movie Title", movies_path(:sort => "title"), :id => "title_header"
+        = link_to "Movie Title", movies_path(:sort => "title", :ratings => session[:ratings] ), :id => "title_header"
       %th Rating
       %th{:class => ('hilite' if @sort == 'release_date') }
-        = link_to "Release Date", movies_path(:sort => "release_date"), :id => "release_date_header"
+        = link_to "Release Date", movies_path(:sort => "release_date", :ratings => session[:ratings]), :id => "release_date_header"
       %th More Info
   %tbody
     - @movies.each do |movie|
